CI build workflow added

--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -1,6 +1,7 @@
 name: Run Gradle on PRs
 'on':
-  pull_request
+  pull_request:
+    branches: [ develop ]
   push:
     branches: [ develop ]
 jobs:
