PMD plugin extension configured in gradle project!

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
-#product properties
+#gradle properties
 org.gradle.logging.level=warn
 
 #custom properties
 fantastic_gradle_version=1.0.0
+
+#project properties
+pmd_plugin_version=6.21.0
+pmd_rules_location=src/main/resources/pmd-ruleset.xml
