The task 'test' configured to log tests duting build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #gradle properties
-org.gradle.logging.level=warn
+#org.gradle.logging.level=warn
 
 #custom properties
 fantastic_gradle_version=1.0.0
@@ -7,3 +7,5 @@ fantastic_gradle_version=1.0.0
 #project properties
 pmd_plugin_version=6.21.0
 pmd_rules_location=gradle/pmd/pmd-ruleset.xml
+
+#testLoggingEvents=FAILED # described which tests to log during 'test' task execution
