Unit test execution logging configured

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,5 @@ fantastic_gradle_version=1.0.0
 pmd_plugin_version=6.21.0
 pmd_rules_location=gradle/pmd/pmd-ruleset.xml
 
-#testLoggingEvents=FAILED # described which tests to log during 'test' task execution
+#describe which tests to log during 'test' task execution
+testLoggingEvents=FAILED
