Integration with inmemory H2 storage. Part #1

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,3 +3,7 @@ logging:
     root: INFO
     com.leonovich.fantasticgradle: DEBUG
     org.springframework: INFO
+
+spring:
+  jpa:
+    show-sql: true
