--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
+          #- ubuntu-latest
           - macos-latest
           #- windows-latest
     runs-on: ${{ matrix.os }}
