--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,3 +1,8 @@
 logging:
   level:
     root: info
+
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:fantastic_test_database;DB_CLOSE_DELAY=-1
