Added Spring Configuration properties to populate some API parameters. Upgraded to java 17.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,11 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
   main:
-    banner-mode: off
+    banner-mode: console
+  application:
+    name: Fantastic Gradle API
+    version: 0.0.1-SNAPSHOT
+    fantastic-gradle-version: 1.0.0-SNAPSHOT
 
 logging:
   level:
