Centralized service version in one single place and injected it to spring configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,9 +12,9 @@ spring:
   main:
     banner-mode: console
   application:
-    name: Fantastic Gradle API
-    version: 0.0.1-SNAPSHOT
-    fantastic-gradle-version: 1.0.0-SNAPSHOT
+    name: fantastic-gradle-srv
+    version: @version@
+    fantastic-gradle-version: @fantasticGradleVersion@
 
 logging:
   level:
