--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 #org.gradle.logging.level=warn
 
 #custom properties
-fantasticGradleVersion=1.0.0
+fantasticGradleVersion=2.0.0-SNAPSHOT
 
 #project properties
 pmd_plugin_version=6.21.0
